--- a/hanmadang/src/main/resources/application.properties
+++ b/hanmadang/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 ## local test ###
 server.port=8088
 dev.mode = true
-spring.db2.datasource.url=jdbc:sqlserver://DESKTOP-TPS8D0J:1433;databaseName=scms_posco;
+spring.db2.datasource.url=jdbc:sqlserver://weespk.iptime.org:1433;databaseName=scms_posco;
 spring.db2.datasource.username=sa
 spring.db2.datasource.password=1132
-spring.db1.datasource.url=jdbc:sqlserver://DESKTOP-TPS8D0J:1433;databaseName=posco_web;
+spring.db1.datasource.url=jdbc:sqlserver://weespk.iptime.org:1433;databaseName=posco_web;
 spring.db1.datasource.username=sa
 spring.db1.datasource.password=1132
 
